[package]
name = "htsops"
version = "0.1.0"
authors = ["Kent Kawashima <kentkawashima@gmail.com>"]
edition = "2018"

[lib]
name = "htsops"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
crate-type = ["cdylib", "rlib"]
# crate-type = ["cdylib"]

[[bin]]
name = "pileup"
path = "bin/pileup.rs"

[[bin]]
name = "filter_control"
path = "bin/filter_control.rs"

[[bin]]
name = "filter_control_threaded"
path = "bin/filter_control_threaded.rs"

[[bin]]
name = "nr_list"
path = "bin/nr_list.rs"

[[bin]]
name = "call_snv"
path = "bin/call_snv.rs"

[[bin]]
name = "multi_mpileup"
path = "bin/multi_mpileup.rs"

[[bin]]
name = "spatial_pileup"
path = "bin/spatial_pileup.rs"


[[bin]]
name = "estimate"
path = "bin/estimate.rs"

[dependencies]
rust-htslib = { version = "0.36" }
itertools = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }
bitflags = { version = "1.2" }
fishers_exact = { version = "1.0" }
clap = { version = "2.33" }
indexmap = { version = "1.6.2" }
lazy_static = { version="1.4.0" }
crossbeam = { version = "0.8.0" }
# pyo3 = { version = "0.13.1", features = ["extension-module"] }
# bio = { version = "0.32" }
# bio-types = { version = "0.10" }
# flate2 = { version = "1.0" }
# sled = { version = "0.34" }

[build]
rustflags = ["-D_POSIX_C_SOURCE=200112L"]
